--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+    ports:
+      - "10022:22"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
@@ -14,5 +16,8 @@ services:
     build:
       context: vnc
       dockerfile: ./Dockerfile
+    ports:
+      - "10022:22"
+      - "15901:5901"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
