--- a/parabola/Dockerfile
+++ b/parabola/Dockerfile
@@ -13,7 +13,7 @@ RUN sed -i 's/#RemoteFileSigLevel = Never/RemoteFileSigLevel = Required Database
 
 RUN cp -vr /etc/pacman.d/mirrorlist.pacnew /etc/pacman.d/mirrorlist
 
-RUN wget https://git.parabola.nu/abslibre.git/plain/libre/pacman/pacman.conf.$(uname -m)
+RUN curl -O https://git.parabola.nu/abslibre.git/plain/libre/pacman/pacman.conf.$(uname -m)
 RUN cp /etc/pacman.conf /etc/pacman.conf.orig
 RUN mv pacman.conf.$(uname -m) /etc/pacman.conf
 
