--- a/parabola/Dockerfile
+++ b/parabola/Dockerfile
@@ -26,7 +26,6 @@ RUN pacman -Syy
 # cant make it work
 # RUN pacman-key --refresh
 
-RUN yes / pacman -Syuu your-freedom pacman
-RUN yes / pacman -Syuu your-freedom pacman libelogind udev-init-scripts
-RUN yes / pacman -Syuu your-privacy
-
+RUN yes | pacman -Syuu your-freedom pacman
+RUN yes | pacman -Syuu your-freedom pacman libelogind udev-init-scripts
+RUN yes | pacman -Syuu your-privacy
