parabola working again

--- a/parabola/Dockerfile
+++ b/parabola/Dockerfile
@@ -27,5 +27,5 @@ RUN pacman -Syy
 # RUN pacman-key --refresh
 
 RUN yes | pacman -Syuu your-freedom pacman
-RUN yes | pacman -Syuu your-freedom pacman libelogind udev-init-scripts
-RUN yes | pacman -Syuu your-privacy
+# RUN yes | pacman -Syuu your-freedom pacman libelogind udev-init-scripts
+# RUN yes | pacman -Syuu your-privacy
