--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,15 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
+  arch_xorg:
+    image: marcpartensky/arch:xorg
+    build:
+      context: xorg
+    volumes:
+      - /tmp/.X11-unix:/tmp/.X11-unix
+    devices:
+      - /dev/dri
+
   arch_vnc:
     image: marcpartensky/arch:vnc
     build:
