--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,18 +1,21 @@
 FROM archlinux:latest
 LABEL maintainer="Marc Partensky"
 
-RUN pacman -Syu --noconfirm sudo git zsh
+RUN pacman -Syyyu --needed --noconfirm base-devel
+RUN pacman -S --noconfirm git
+
 RUN useradd --create-home --groups wheel --shell /usr/bin/zsh marc
 RUN passwd -d marc
 RUN echo "%wheel ALL=(ALL) ALL" >> /etc/sudoers
 
-RUN pacman -S --needed base-devel paru-bin --noconfirm
+USER marc
+WORKDIR /tmp
+RUN git clone https://aur.archlinux.org/paru.git
+WORKDIR /tmp/paru
+RUN makepkg -si --noconfirm
 
-# USER marc
-# WORKDIR /tmp
-# RUN git clone https://aur.archlinux.org/paru.git
-# WORKDIR /tmp/paru
-# RUN makepkg -si --noconfirm
+RUN paru -Syu --noconfirm zsh neovim docker docker-compose openssh
+COPY entrypoint.sh /tmp/entrypoint.sh
 
 ENV HOST docker
 
@@ -23,8 +26,6 @@ RUN zsh git/dotfiles/main.sh
 RUN touch .zshrc
 RUN echo 'source $HOME/git/dotfiles/main.sh' > .zshrc
 
-RUN paru -Syu --noconfirm neovim docker docker-compose openssh tigervnc dwm
-COPY entrypoint.sh /tmp/entrypoint.sh
 
 EXPOSE 22
 ENTRYPOINT [ "/tmp/entrypoint.sh" ]
