--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -31,6 +31,8 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: push
+      run: make push
     # - name: Build and push
     #   id: docker_build
     #   uses: docker/build-push-action@v2
