removed useless packages

--- a/vnc/Dockerfile
+++ b/vnc/Dockerfile
@@ -3,9 +3,9 @@ MAINTAINER marcpartensky <marc.partensky@gmail.com>
 
 # Install packages
 RUN paru -Syyy --noconfirm \
-	facter \
-	enlightenment \
-	mate-gtk3 \
+	# facter \
+	# enlightenment \
+	# mate-gtk3 \
 	net-tools \
 	# python \
 	# python3-numpy \
