--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -9,8 +9,8 @@ autorestart=true
 command=/usr/bin/x11vnc
 autorestart=true
 
-[program:mate]
-command=/usr/sbin/mate-session
+[program:dwm]
+command=/usr/local/bin/dwm
 autorestart=true
 
 [program:noVNC]
