--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -14,5 +14,6 @@ command=/usr/local/bin/dwm
 autorestart=true
 
 [program:noVNC]
-command=/opt/noVNC/utils/launch.sh --vnc localhost:5900 --listen 8080
+; command=/sbin/novnc --vnc localhost:5900 --listen 8080
+command=/sbin/novnc --vnc localhost:5900 --listen 8080
 autorestart=true
