setup wallpapers and dwmblocks

--- a/xorg/Dockerfile
+++ b/xorg/Dockerfile
@@ -15,11 +15,21 @@ RUN paru -Syyy --noconfirm \
 # dwm build dependencies
 RUN paru -S --noconfirm libxft libxinerama
 
-WORKDIR /home/marc
-RUN git clone https://github.com/marcpartensky/dwm git/dwm
-RUN make -C git/dwm
+# setup dwn
+RUN git clone https://github.com/marcpartensky/dwm ~/git/dwm
+RUN make -C ~/git/dwm
 USER root
-RUN make -C git/dwm install
+RUN make -C ~/git/dwm install
 USER marc
+
+# setup dwmblocks
+RUN git clone https://github.com/marcpartensky/dwmblocks ~/git/dwmblocks
+RUN make -C ~/git/dwmblocks
+USER root
+RUN make -C ~/git/dwmblocks install
+USER marc
+
+# setup wallpapers
+RUN git clone https://github.com/marcpartensky/wallpapers ~/wallpapers
 
 ENTRYPOINT [ "firefox" ]
