--- a/xorg/Dockerfile
+++ b/xorg/Dockerfile
@@ -17,16 +17,16 @@ RUN paru -S --noconfirm libxft libxinerama
 
 # setup dwn
 RUN git clone https://github.com/marcpartensky/dwm ~/git/dwm
-RUN make -C ~/git/dwm
+RUN make -C git/dwm
 USER root
-RUN make -C ~/git/dwm install
+RUN make -C git/dwm install
 USER marc
 
 # setup dwmblocks
 RUN git clone https://github.com/marcpartensky/dwmblocks ~/git/dwmblocks
-RUN make -C ~/git/dwmblocks
+RUN make -C git/dwmblocks
 USER root
-RUN make -C ~/git/dwmblocks install
+RUN make -C git/dwmblocks install
 USER marc
 
 # setup wallpapers
