removed useless stuff

--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -5,6 +5,10 @@ nodaemon=true
 command=/usr/bin/Xvfb :0 -screen 0 1024x768x24
 autorestart=true
 
+[program:startx]
+command=startx
+autorestart=true
+
 [program:x11vnc]
 command=/usr/bin/x11vnc
 autorestart=true
