--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -5,8 +5,8 @@ nodaemon=true
 command=/usr/bin/Xvfb :0 -screen 0 1024x768x24
 autorestart=true
 
-[program:startx]
-command=startx
+[program:picom]
+command=picom -b --experimental
 autorestart=true
 
 [program:x11vnc]
