--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -17,6 +17,10 @@ autorestart=true
 command=/usr/local/bin/dwm
 autorestart=true
 
+[program:dwmblocks]
+command=/usr/local/bin/dwmblocks
+autorestart=true
+
 [program:noVNC]
 ; command=/sbin/novnc --vnc localhost:5900 --listen 8080
 command=/sbin/novnc --vnc localhost:5900 --listen 0.0.0.0:8080
