--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -1,27 +1,38 @@
 [supervisord]
-nodaemon=true
+; nodaemon=true
+nodaemon=false
 
-[program:X11]
-command=/usr/bin/Xvfb :0 -screen 0 1024x768x24
+; [program:X11]
+; command=/usr/bin/Xvfb :0 -screen 0 1024x768x24
+; autorestart=true
+;
+[program:startx]
+command=startx
 autorestart=true
+priority=1
 
 [program:picom]
 command=picom -b --experimental
 autorestart=true
+priority=2
 
 [program:x11vnc]
 command=/usr/bin/x11vnc
 autorestart=true
+priority=2
 
 [program:dwm]
 command=/usr/local/bin/dwm
 autorestart=true
+priority=3
 
 [program:dwmblocks]
 command=/usr/local/bin/dwmblocks
 autorestart=true
+priority=4
 
 [program:noVNC]
 ; command=/sbin/novnc --vnc localhost:5900 --listen 8080
 command=/sbin/novnc --vnc localhost:5900 --listen 0.0.0.0:8080
 autorestart=true
+priority=3
