--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -1,20 +1,21 @@
 [supervisord]
-; nodaemon=true
-nodaemon=false
+nodaemon=true
+; nodaemon=false
 
-; [program:X11]
-; command=/usr/bin/Xvfb :0 -screen 0 1024x768x24
-; autorestart=true
-;
-[program:startx]
-command=startx
+[program:X11]
+command=/usr/bin/Xvfb :0 -screen 0 1024x768x24
 autorestart=true
 priority=1
 
-[program:picom]
-command=picom -b --experimental
-autorestart=true
-priority=2
+; [program:startx]
+; command=startx
+; autorestart=true
+; priority=1
+
+; [program:picom]
+; command=picom -b --experimental
+; autorestart=true
+; priority=2
 
 [program:x11vnc]
 command=/usr/bin/x11vnc
