--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -3,7 +3,8 @@ nodaemon=true
 ; nodaemon=false
 
 [program:X11]
-command=/usr/bin/Xvfb :0 -screen 0 1024x768x24
+; command=/usr/bin/Xvfb :0 -screen 0 1024x768x24
+command=/usr/bin/Xvfb :0
 autorestart=true
 priority=1
 
@@ -12,10 +13,10 @@ priority=1
 ; autorestart=true
 ; priority=1
 
-; [program:picom]
-; command=picom -b --experimental
-; autorestart=true
-; priority=2
+[program:picom]
+command=picom -b --experimental-backends
+autorestart=true
+priority=2
 
 [program:x11vnc]
 command=/usr/bin/x11vnc
@@ -37,3 +38,11 @@ priority=4
 command=/sbin/novnc --vnc localhost:5900 --listen 0.0.0.0:8080
 autorestart=true
 priority=3
+
+[program:wallpaper]
+command=feh --bg-fill ~/wallpapers/0.jpg
+priority=5
+
+[program:alacritty]
+command=alacritty
+priority=5
