shell scripts too

--- a/xorg/Dockerfile
+++ b/xorg/Dockerfile
@@ -18,20 +18,24 @@ RUN paru -Syyy --noconfirm \
 RUN paru -S --noconfirm libxft libxinerama
 
 # setup dwn
-RUN git clone https://github.com/marcpartensky/dwm ~/git/dwm
+RUN git clone https://github.com/marcpartensky/dwm git/dwm
 RUN make -C git/dwm
 USER root
 RUN make -C git/dwm install
 USER marc
 
 # setup dwmblocks
-RUN git clone https://github.com/marcpartensky/dwmblocks ~/git/dwmblocks
+RUN git clone https://github.com/marcpartensky/dwmblocks git/dwmblocks
 RUN make -C git/dwmblocks
 USER root
 RUN make -C git/dwmblocks install
 USER marc
 
 # setup wallpapers
-RUN git clone https://github.com/marcpartensky/wallpapers ~/wallpapers
+RUN git clone https://github.com/marcpartensky/wallpapers wallpapers
+
+# setup shell scripts
+RUN git clone https://github.com/marcpartensky/shell git/shell
+RUN make -C git/shell
 
 ENTRYPOINT [ "alacritty" ]
