--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -14,7 +14,7 @@ RUN git clone https://aur.archlinux.org/paru.git
 WORKDIR /tmp/paru
 RUN makepkg -si --noconfirm
 
-RUN paru -Syu --noconfirm zsh neovim docker docker-compose openssh exa bat paruz
+RUN paru -Syu --noconfirm zsh neovim stow exa bat paruz openssh docker docker-compose
 COPY entrypoint.sh /tmp/entrypoint.sh
 
 ENV HOST docker
@@ -22,10 +22,7 @@ ENV HOST docker
 WORKDIR /home/marc
 RUN mkdir git
 RUN git clone https://github.com/marcpartensky/dotfiles git/dotfiles
-RUN zsh git/dotfiles/main.sh
-RUN touch .zshrc
-RUN echo 'source $HOME/git/dotfiles/main.sh' > .zshrc
-
+RUN make -c git/dotfiles stow
 
 EXPOSE 22
 ENTRYPOINT [ "/tmp/entrypoint.sh" ]
