--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -40,7 +40,7 @@ autorestart=true
 priority=3
 
 [program:wallpaper]
-command=feh --bg-fill ~/wallpapers/0.jpg
+command=.local/bin/wpp -n
 priority=5
 
 [program:alacritty]
