--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -34,14 +34,13 @@ autorestart=true
 priority=4
 
 [program:noVNC]
-; command=/sbin/novnc --vnc localhost:5900 --listen 8080
-command=/sbin/novnc --vnc localhost:5900 --listen 0.0.0.0:8080
+command=/sbin/novnc --vnc localhost:5900 --listen 8080
 autorestart=true
 priority=3
 
-[program:wallpaper]
-command=.local/bin/wpp -n
-priority=5
+; [program:wallpaper]
+; command=.local/bin/wpp -n
+; priority=5
 
 [program:alacritty]
 command=alacritty
