--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -13,10 +13,10 @@ priority=1
 ; autorestart=true
 ; priority=1
 
-[program:picom]
-command=picom -b --experimental-backends
-autorestart=true
-priority=2
+; [program:picom]
+; command=picom -b --experimental-backends
+; autorestart=true
+; priority=2
 
 [program:x11vnc]
 command=/usr/bin/x11vnc
@@ -38,9 +38,9 @@ command=/sbin/novnc --vnc localhost:5900 --listen 8080
 autorestart=true
 priority=3
 
-; [program:wallpaper]
-; command=.local/bin/wpp -n
-; priority=5
+[program:cron]
+command=cron -f
+priority=5
 
 [program:alacritty]
 command=alacritty
