--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -3,9 +3,9 @@ nodaemon=true
 ; nodaemon=false
 
 [program:X11]
-; command=/usr/bin/Xvfb :0 -screen 0 1024x768x24
-command=/usr/bin/Xvfb :0
+command=/usr/bin/Xvfb :0 -screen 0 1536x768x24
 autorestart=true
+user=marc
 priority=1
 
 ; [program:startx]
@@ -21,27 +21,33 @@ priority=1
 [program:x11vnc]
 command=/usr/bin/x11vnc
 autorestart=true
+user=marc
 priority=2
 
 [program:dwm]
 command=/usr/local/bin/dwm
 autorestart=true
+user=marc
 priority=3
 
 [program:dwmblocks]
 command=/usr/local/bin/dwmblocks
 autorestart=true
+user=marc
 priority=4
 
 [program:noVNC]
 command=/sbin/novnc --vnc localhost:5900 --listen 8080
 autorestart=true
+user=marc
 priority=3
 
 [program:cron]
-command=cron -f
+command=crond -f
+user=root
 priority=5
 
 [program:alacritty]
 command=alacritty
+user=marc
 priority=5
