--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -42,6 +42,11 @@ autorestart=true
 user=marc
 priority=3
 
+[program:wallpaper]
+command=/home/marc/.local/bin/wpp -n
+user=marc
+priority=5
+
 [program:cron]
 command=crond -f
 user=root
