--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -13,10 +13,10 @@ priority=1
 ; autorestart=true
 ; priority=1
 
-; [program:picom]
-; command=picom -b --experimental-backends
-; autorestart=true
-; priority=2
+[program:picom]
+command=picom -b
+autorestart=true
+priority=2
 
 [program:x11vnc]
 command=/usr/bin/x11vnc
