--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -14,7 +14,7 @@ priority=1
 ; priority=1
 
 [program:picom]
-command=picom -b
+command=zsh -c "sleep 5 && picom -b"
 autorestart=true
 priority=2
 
@@ -43,7 +43,7 @@ user=marc
 priority=3
 
 [program:wallpaper]
-command=/home/marc/.local/bin/wpp -n
+command=zsh -c "sleep 5 && /home/marc/.local/bin/wpp -n"
 user=marc
 priority=5
 
