--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -15,6 +15,7 @@ priority=1
 
 [program:picom]
 command=zsh -c "sleep 5 && picom -b"
+user=marc
 autorestart=true
 priority=2
 
@@ -43,7 +44,7 @@ user=marc
 priority=3
 
 [program:wallpaper]
-command=zsh -c "sleep 5 && /home/marc/.local/bin/wpp -n"
+command=zsh -c "sleep 2 && /home/marc/.local/bin/wpp -n"
 user=marc
 priority=5
 
@@ -53,6 +54,6 @@ user=root
 priority=5
 
 [program:alacritty]
-command=alacritty
+command=alacritty -e sh -c "picom -b"
 user=marc
 priority=5
