--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -32,8 +32,8 @@ COPY entrypoint.sh /tmp/entrypoint.sh
 
 ENV HOST docker
 
-RUN sed -i -e 's/# en_US.UTF-8 UTF-8/fr_FR.UTF-8 UTF-8/' /etc/locale.gen && \
-    locale-gen
+# RUN sed -i -e 's/# en_US.UTF-8 UTF-8/fr_FR.UTF-8 UTF-8/' /etc/locale.gen && \
+    # locale-gen
 ENV LC_ALL fr_FR.UTF-8
 ENV LANG fr_FR.UTF-8
 ENV LANGUAGE fr_FR:fr
