--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,6 +1,12 @@
 FROM archlinux:latest
 LABEL maintainer="Marc Partensky"
 
+RUN sed -i -e 's/# en_US.UTF-8 UTF-8/fr_FR.UTF-8 UTF-8/' /etc/locale.gen && \
+    locale-gen
+ENV LC_ALL fr_FR.UTF-8
+ENV LANG fr_FR.UTF-8
+ENV LANGUAGE fr_FR:fr
+
 RUN pacman -Syyyu --needed --noconfirm base-devel
 RUN pacman -S --noconfirm git
 
@@ -32,11 +38,6 @@ COPY entrypoint.sh /tmp/entrypoint.sh
 
 ENV HOST docker
 
-# RUN sed -i -e 's/# en_US.UTF-8 UTF-8/fr_FR.UTF-8 UTF-8/' /etc/locale.gen && \
-    # locale-gen
-ENV LC_ALL fr_FR.UTF-8
-ENV LANG fr_FR.UTF-8
-ENV LANGUAGE fr_FR:fr
 
 WORKDIR /home/marc
 RUN mkdir git
