--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -24,8 +24,8 @@ jobs:
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-    - name: build
-      run: make build
+    - name: build all
+      run: make buildall
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
