--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -26,8 +26,16 @@ jobs:
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-    - name: build all
-      run: make buildall
+    - name: build base
+      run: make base
+    - name: build xorg
+      run: make xorg
+    - name: build vnc
+      run: make vnc
+    - name: build parabola
+      run: make parabola
+    # - name: build all
+    #   run: make buildall
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
