no pipeinput rip

--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -20,7 +20,7 @@ autorestart=true
 priority=2
 
 [program:x11vnc]
-command=/usr/bin/x11vnc -pipeinput
+command=/usr/bin/x11vnc
 autorestart=true
 user=marc
 priority=2
