--- a/xorg/supervisord.ini
+++ b/xorg/supervisord.ini
@@ -2,11 +2,11 @@
 nodaemon=true
 ; nodaemon=false
 
-[program:Xephyr]
-command=Xephyr :1 -screen 0 1536x768x24
-autorestart=true
-user=marc
-priority=1
+; [program:Xephyr]
+; command=Xephyr :1 -screen 0 1536x768x24
+; autorestart=true
+; user=marc
+; priority=1
 
 ; [program:startx]
 ; command=startx
