--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -3,7 +3,7 @@ nodaemon=true
 ; nodaemon=false
 
 [program:X11]
-command=/usr/bin/Xvfb :0 -screen 0 1820x980
+command=/usr/bin/Xvfb :0 -screen 0 1820x980x8
 autorestart=true
 user=marc
 priority=1
