--- a/vnc/Dockerfile
+++ b/vnc/Dockerfile
@@ -27,5 +27,5 @@ COPY supervisord.ini /etc/supervisor.d/supervisord.ini
 
 USER root
 COPY entrypoint.sh entrypoint.sh
-ENTRYPOINT [ ".//entrypoint.sh" ]
+ENTRYPOINT [ "./entrypoint.sh" ]
 # ENTRYPOINT ["/usr/bin/supervisord", "-c", "/etc/supervisor.d/supervisord.ini"]
