--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -1,6 +1,7 @@
 [supervisord]
 nodaemon=true
 ; nodaemon=false
+serverurl=unix:///var/run/supervisord.sock ; use a unix:// URL  for a unix socket
 
 [program:X11]
 command=/usr/bin/Xvfb :0 -screen 0 1820x980x8
