--- a/vnc/Dockerfile
+++ b/vnc/Dockerfile
@@ -24,6 +24,7 @@ COPY supervisord.ini /etc/supervisor.d/supervisord.ini
 
 USER root
 RUN pwd
+RUN ls
 COPY entrypoint.sh entrypoint.sh
 ENTRYPOINT [ "./entrypoint.sh" ]
 # ENTRYPOINT ["/usr/bin/supervisord", "-c", "/etc/supervisor.d/supervisord.ini"]
