--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -28,14 +28,6 @@ jobs:
       uses: docker/setup-buildx-action@v1
     - name: build base
       run: make buildbase
-    - name: build xorg
-      run: make buildxorg
-    - name: build vnc
-      run: make buildvnc
-    - name: build parabola
-      run: make buildparabola
-    # - name: build all
-    #   run: make buildall
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
@@ -49,3 +41,69 @@ jobs:
     #   with:
     #     push: true
     #     tags: marcpartensky/arch:latest
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Update apt
+      run: sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y
+    - name: Install make
+      run: sudo apt install make docker-compose -y
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: build xorg
+      run: make buildxorg
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: push
+      run: make push
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Update apt
+      run: sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y
+    - name: Install make
+      run: sudo apt install make docker-compose -y
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: build vnc
+      run: make buildvnc
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: push
+      run: make push
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Update apt
+      run: sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y
+    - name: Install make
+      run: sudo apt install make docker-compose -y
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: build parabola
+      run: make buildparabola
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: push
+      run: make push
